--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
-  "name": "acestream-cloud-proxy",
+  "name": "acestream-web",
   "version": "1.0.0",
-  "description": "Proxy AceStream para streaming en la nube sin instalación local",
+  "description": "Reproductor AceStream con WebTorrent",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "acestream",
-    "proxy",
-    "streaming",
-    "p2p",
-    "cloud"
-  ],
-  "author": "Tu Nombre",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "path": "^0.12.7"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.0.0"
