--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "acestream-web",
+  "name": "acestream-cloud",
   "version": "1.0.0",
-  "description": "Reproductor AceStream con WebTorrent",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "axios": "^1.6.0"
   }
 }
