--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "acestream-cloud",
+  "name": "acestream-web",
   "version": "1.0.0",
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "node-fetch": "^3.3.2"
   }
 }
